compiler/typ/tests/fixtures/diagnostics/0422_modules_include_value_mismatch_02.ml.infer.expected
File "0422_modules_include_value_mismatch_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0422_modules_include_value_mismatch_02 is not a valid module name.

File "0422_modules_include_value_mismatch_02.ml", lines 5-9, characters 20-3:
5 | ....................struct
6 |   include struct
7 |     let x = true
8 |   end
9 | end
Error: Signature mismatch:
       Modules do not match: sig val x : bool end is not included in S_beta
       Values do not match: val x : bool is not included in val x : int
       The type bool is not compatible with the type int
       File "0422_modules_include_value_mismatch_02.ml", line 2, characters 2-13:
         Expected declaration
       File "0422_modules_include_value_mismatch_02.ml", line 7, characters 8-9:
         Actual declaration
