compiler/typ/tests/fixtures/diagnostics/0422_modules_include_value_mismatch_02.ml
module type S_beta = sig
  val x : int
end

module N : S_beta = struct
  include struct
    let x = true
  end
end
